// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/npm/index should fetch package info from custom registry 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should fetch package info from npm 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should handle foobar 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should handle no time 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should parse repo url (string) 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
  ],
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should parse repo url 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
  ],
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should replace any environment variable in npmrc 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should return deprecated 1`] = `
Object {
  "deprecationMessage": "On registry \`https://registry.npmjs.org/\`, the \\"latest\\" version (v0.0.2) of dependency \`foobar\` has the following deprecation notice:

\`This is deprecated\`

Marking the latest version of an npm package as deprecated results in the entire package being considered deprecated, so contact the package author you think this is a mistake.",
  "deprecationSource": "npm",
  "latestVersion": "0.0.2",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "isDeprecated": true,
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.2",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should return deprecated 2`] = `
"On registry \`https://registry.npmjs.org/\`, the \\"latest\\" version (v0.0.2) of dependency \`foobar\` has the following deprecation notice:

\`This is deprecated\`

Marking the latest version of an npm package as deprecated results in the entire package being considered deprecated, so contact the package author you think this is a mistake."
`;

exports[`datasource/npm/index should send an authorization header if provided 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should use NPM_TOKEN if provided 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should use default registry if missing from npmrc 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should use host rules by baseUrl if provided 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`datasource/npm/index should use host rules by hostName if provided 1`] = `
Object {
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;
